--- a/style.css
+++ b/style.css
@@ -199,3 +199,108 @@
     font-weight: bold;
     font-size: 40px;
 }
+
+
+@media screen and (max-width:640px) {
+    #section-3 img{
+        height: 150px;
+        padding-bottom: 5%;
+    }
+    #section-4{
+        display:block;
+        margin-left: 120px;
+    }
+    #section-4 .card{
+        width: 300px !important;
+        height:400px;
+        margin-bottom: 5%;
+    }
+    #section-4 .card img{
+        width:300px;
+        height: 200px;
+    }
+    #section-4 .card .card-title{
+         font-size:20px;
+    }
+    #section-4 .card .card-text{
+        font-size: 12px;
+    }
+    #section-4 .card .btn{
+        width: 120px;
+        font-size: 15px;
+        height: 30px;
+    }
+    #section-4 .card .btn:hover{
+        background:linear-gradient(45deg,#9a89a9,rgb(112, 190, 17));
+        color: white;
+    }
+    #section-5 h5{
+        font-size: 15px;
+    }
+    #section-5 a{
+        font-size: 15px;
+    }
+    #section-5 p{
+        font-size: 15px;
+    }
+    #section-5 .copyright{
+         font-size: 10px;
+    }
+    #section-5 .btn{
+        width: 100px;
+        padding: 0px;
+        height: 25px;
+    }
+}
+
+@media screen and (max-width:480px) {
+    #section-3 img{
+        width: 100px;
+        height: 100px;
+        
+    }
+    #section-4{
+        display:block;
+    }
+    #section-4 .card{
+        width: 200px !important;
+        height: 330px;
+        margin-bottom: 5%;
+    }
+    #section-4 .card img{
+        width:200px;
+        height: 150px;
+    }
+    #section-4 .card .card-title{
+         font-size:15px;
+    }
+    #section-4 .card .card-text{
+        font-size: 10px;
+    }
+    #section-4 .card .btn{
+        width: 100px;
+        font-size: 10px;
+        height: 20px;
+    }
+    #section-4 .card .btn:hover{
+        background:linear-gradient(45deg,#9a89a9,rgb(112, 190, 17));
+        color: white;
+    }
+    #section-5 h5{
+        font-size: 15px;
+    }
+    #section-5 a{
+        font-size: 15px;
+    }
+    #section-5 p{
+        font-size: 15px;
+    }
+    #section-5 .copyright{
+         font-size: 10px;
+    }
+    #section-5 .btn{
+        width: 100px;
+        padding: 0px;
+        height: 25px;
+    }
+}
