--- a/style.css
+++ b/style.css
@@ -315,3 +315,51 @@
         background:linear-gradient(45deg,#9a89a9,rgb(112, 190, 17));
         color: white;
     }
+    
+    /*section-2*/
+    #section-2{
+        display:block;
+    }
+    #section-2 .card{
+        width: 200px !important;
+        height: 330px;
+        margin-bottom: 5%;
+    }
+    #section-2 .card img{
+        width:200px;
+        height: 150px;
+    }
+    #section-2 .card .card-title{
+         font-size:15px;
+    }
+    #section-2 .card .card-text{
+        font-size: 10px;
+    }
+    #section-2 .card .btn{
+        width: 100px;
+        font-size: 10px;
+        height: 20px;
+    }
+    #section-2 .card .btn:hover{
+        background:linear-gradient(45deg,#9a89a9,rgb(112, 190, 17));
+        color: white;
+    }
+
+    #section-5 h5{
+        font-size: 15px;
+    }
+    #section-5 a{
+        font-size: 15px;
+    }
+    #section-5 p{
+        font-size: 15px;
+    }
+    #section-5 .copyright{
+         font-size: 10px;
+    }
+    #section-5 .btn{
+        width: 100px;
+        padding: 0px;
+        height: 25px;
+    }
+}
