--- a/css/style.css
+++ b/css/style.css
@@ -2,20 +2,48 @@
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
+  background: linear-gradient(180deg, #0e0909, rgb(30, 3, 60));
+  border-radius: 50px;
 }
-
+.navbar-brand img {
+  border-radius: 100px;
+  height: 50px;
+  width: 50px;
+}
+.card-body {
+  border-radius: 50px 50px 0 0;
+  margin-top: 2%;
+}
+li {
+  padding: 0 8px 0 8px;
+  margin: 3px;
+  font-weight: bold;
+  background: linear-gradient(180deg, #0e0909, rgb(51, 31, 75));
+}
+.d-flex button {
+  font-weight: bold;
+}
+/* body{
+  background: linear-gradient(180deg, #0e0909, rgb(30, 3, 60));
+  border-radius: 50px;
+} */
 /*table*/
 .container {
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 100px;
+  background: linear-gradient(180deg, #0e0909, rgb(30, 3, 60));
+  border-radius: 50px;
 }
 
 table {
-  width: 800px;
+  width: 120%;
   border-collapse: collapse;
   font-size: 18px;
+  background: linear-gradient(180deg, #0e0909, rgb(30, 3, 60));
+  border-radius: 50px;
 }
 /* tr:nth-child(even) {
     background-color: #303131;
@@ -27,6 +55,8 @@ td {
   color: #fff;
   /* border: 1px solid white; */
   text-align: center;
+  background: linear-gradient(180deg, #0e0909, rgb(30, 3, 60));
+  border-radius: 50px;
 }
 
 th {
@@ -69,20 +99,36 @@ tbody {
     }
   }
 }
+
+.d-md-block {
+  background: none;
+  color: white;
+  padding: 10px;
+}
+.d-md-block h3 {
+  padding: 10px;
+}
 .webpage {
-  background-color: black;
+  /* background-color: black; */
+  background: linear-gradient(180deg, #0e0909, rgb(30, 3, 60));
 }
 /* Nav Bar Styles*/
 .main-navbar .navbar {
-  background-color: black;
+  /* background-color: black; */
+  background: linear-gradient(180deg, #0e0909, rgb(30, 3, 60));
+  border-radius: 50px;
   display: flex;
   justify-content: center;
-  margin: 0px 70px;
+  /* margin: 0px 70px; */
   color: rgb(233, 223, 220);
 }
 .main-navbar .container-fluid .navbar-brand {
   color: #dcb7d6;
   font-weight: 700;
+  margin-left: 70px;
+}
+.d-flex {
+  margin-right: 70px;
 }
 .main-navbar .container-fluid .navbar-brand:hover {
   color: coral;
@@ -137,23 +183,8 @@ tbody {
   margin-top: 2%;
   justify-content: center;
   margin-left: 5%;
-}
-
-#section-2 .figure-caption {
-  color: #cabac7;
-  word-break: break-word;
-  padding: 5%;
-}
-
-#section-2 .figure .figure-img {
-  word-break: break-word;
-  width: 70%;
-}
-
-.container img {
-  width: 100%;
-  margin-bottom: 2%;
-  height: 400px;
+  background: linear-gradient(180deg, #0e0909, rgb(30, 3, 60));
+  border-radius: 50px;
 }
 
 #section-4 {
@@ -161,64 +192,63 @@ tbody {
   margin-left: 2%;
   margin-right: 2%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  gap: 2%;
-  background-color: transparent !important;
+  gap: 5%;
+  background: linear-gradient(180deg, #0e0909, rgb(30, 3, 60));
+  border-radius: 50px;
+}
+#section-a {
+  margin-top: 8%;
+  margin-left: 2%;
+  margin-right: 2%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 5%;
+  background: linear-gradient(180deg, #0e0909, rgb(30, 3, 60));
+  border-radius: 50px;
 }
 #section-4 .card {
-  background-color: #0b041e;
+  background: linear-gradient(180deg, #0e0909, rgb(34, 2, 73));
   color: #d9ecea;
   margin-left: 10px;
   margin-right: 10px;
+  border-radius: 25px;
+  font-size: 12px;
+  width: 50px;
+  margin-bottom: 30px;
+  margin-top: 30px;
 }
-#section-2 .card {
-  background-color: #0b041e;
-  color: #d9ecea;
-  margin-left: 25px;
-  margin-right: 25px;
-  border: 2px;
-  border-radius: 30px;
+#section-4 .card:hover {
+  scale: 1.02;
 }
 
 #section-4 .card img {
-  height: 280px;
-}
-
-#section-2 .card img {
-  /* height: 280px; */
-  border: 2px;
-  border-radius: 200px;
-  height: 100px;
-  width: 100px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  height: 200px;
+  width: 200px;
+  border-radius: 100px;
 }
 
 #section-4 .card .btn {
   background: linear-gradient(45deg, #9a89a9, rgb(123, 29, 238));
   border: #b580b2;
   color: black;
-}
-#section-2 .card .btn {
-  background: linear-gradient(45deg, #9a89a9, rgb(123, 29, 238));
-  border: #b580b2;
-  color: black;
+  font-size: 12px;
 }
 
 #section-4 .card .btn:hover {
   background: linear-gradient(45deg, #9a89a9, rgb(112, 190, 17));
   color: white;
 }
-#section-2 .card .btn:hover {
-  background: linear-gradient(45deg, #9a89a9, rgb(112, 190, 17));
-  color: white;
-}
 
 #section-5 {
-  background-color: #16162d;
+  /* background-color: #16162d; */
+  background: linear-gradient(180deg, #0e0909, rgb(30, 3, 60));
+  border-radius: 50px 50px 0 0;
   color: #e9b0e1;
   margin-top: 1%;
-  height: 220px;
+  height: auto;
   font-family: Roboto Slab;
   /* font-weight: bold; */
 }
@@ -234,16 +264,12 @@ tbody {
   margin-bottom: 1%;
   margin-right: 1%;
   border: 1px dashed;
+  background: linear-gradient(180deg, #0e0909, rgb(30, 3, 60));
+  border-radius: 100px;
 }
 #section-5 .backtop a:hover {
   background: linear-gradient(45deg, #9a89a9, rgb(112, 190, 17));
   color: #16162d;
-}
-
-#texthead {
-  text-align: center;
-  font-size: 25px;
-  color: antiquewhite;
 }
 
 #section-2 .text {
@@ -261,24 +287,64 @@ tbody {
   font-weight: bold;
   font-size: 40px;
 }
+#section-a .text {
+  text-align: center;
+  display: flex;
+  color: white;
+  font-weight: bold;
+  font-size: 40px;
+}
+.container a:hover{
+  color: coral !important;;
+}
 
 @media screen and (max-width: 640px) {
+  
+  .navbar-collapse li{
+    font-size: 15px;
+  }
+  .main-navbar .container-fluid .navbar-brand {
+    margin-left: 20px;
+  }
+  .navbar-toggler {
+    width: 30px;
+    height: 30px;
+    border-radius: 5px;
+    padding: 0;
+    margin-right: 20px;
+  }
+  .navbar-toggler span {
+    width: 20px;
+    height: 20px;
+    border-radius: 0;
+  }
+  .navbar-brand img {
+    border-radius: 100px;
+    height: 30px;
+    width: 30px;
+  }
+  #section-4 .card:hover {
+    scale: 1.02;
+  }
   #section-3 img {
     height: 150px;
     padding-bottom: 5%;
   }
-  #section-4 {
-    display: block;
-    margin-left: 120px;
+  #section-a {
+    text-align: center;
+  }
+  #section-a .text {
+    font-size: 25px;
   }
   #section-4 .card {
     width: 300px !important;
-    height: 400px;
+    height: 350px;
     margin-bottom: 5%;
   }
   #section-4 .card img {
-    width: 300px;
+    width: 200px;
     height: 200px;
+    border-radius: 100%;
   }
   #section-4 .card .card-title {
     font-size: 20px;
@@ -324,15 +390,16 @@ tbody {
     background: linear-gradient(45deg, #9a89a9, rgb(112, 190, 17));
     color: white;
   }
-  #section-5{
+  #section-5 {
     margin-top: 0;
     margin-bottom: 0;
     top: 0;
     bottom: 0;
+    height: auto;
   }
 
   #section-5 h5 {
-    font-size: 15px;
+    font-size: 10px;
   }
   #section-5 a {
     font-size: 15px;
@@ -344,9 +411,10 @@ tbody {
     font-size: 10px;
   }
   #section-5 .btn {
-    width: 100px;
+    width: 25px;
     padding: 0px;
     height: 25px;
+    border-radius: 20px;
   }
   .carousel-item img {
     height: 100%;
@@ -354,16 +422,24 @@ tbody {
 }
 
 @media screen and (max-width: 480px) {
+  .navbar-collapse li{
+    font-size: 15px;
+  }
+  .navbar-brand img {
+    border-radius: 100px;
+    height: 30px;
+    width: 30px;
+  }
+  #section-4 .card:hover {
+    scale: 1.02;
+  }
   #section-3 img {
     width: 100px;
     height: 100px;
   }
-  #section-x {
-    display: block;
-  }
   #section-4 .card {
     width: 200px !important;
-    height: 330px;
+    height: 280px;
     margin-bottom: 5%;
     display: flex;
     justify-content: center;
@@ -371,11 +447,11 @@ tbody {
   }
   #section-x .card {
     width: 200px !important;
-    height: 330px;
+    height: 310px;
     margin-bottom: 5%;
   }
   #section-4 .card img {
-    width: 200px;
+    width: 150px;
     height: 150px;
   }
   #section-x .card img {
@@ -389,9 +465,9 @@ tbody {
     font-size: 10px;
   }
   #section-4 .card .btn {
-    width: 100px;
+    width: 80px;
     font-size: 10px;
-    height: 20px;
+    height: 25px;
   }
   #section-4 .text {
     font-size: 25px;
@@ -435,7 +511,9 @@ tbody {
   #section-2 .text {
     font-size: 25px;
   }
-
+  #section-5 {
+    height: auto;
+  }
   #section-5 h5 {
     font-size: 15px;
   }
@@ -443,15 +521,16 @@ tbody {
     font-size: 15px;
   }
   #section-5 p {
-    font-size: 15px;
+    font-size: 12px;
   }
   #section-5 .copyright {
     font-size: 10px;
   }
   #section-5 .btn {
-    width: 100px;
+    width: 25px;
     padding: 0px;
     height: 25px;
+    border-radius: 20px;
   }
 }
 #section-x {
