--- a/css/style.css
+++ b/css/style.css
@@ -163,9 +163,15 @@ tbody {
   background-color: none !important;
 }
 /* Section-1 Styles */
-.carousel-inner img {
+#section-1{
+  /* height: 50%; */
+  margin-top: 3rem;
   width: 100%;
-  height: 650px;
+  margin-bottom: 3rem;
+}
+.carousel-inner img {
+  width: 82%;
+  border-radius: 300px;
 }
 #section-1 .btn {
   color: black;
@@ -299,6 +305,14 @@ tbody {
 }
 
 @media screen and (max-width: 640px) {
+  .carousel-inner img {
+    width: 75%;
+    border-radius: 300px;
+  }
+  .carousel-indicators [data-bs-target] {
+    width: 2px;
+    height: 2px;
+  }
   
   .navbar-collapse li{
     font-size: 15px;
@@ -422,6 +436,14 @@ tbody {
 }
 
 @media screen and (max-width: 480px) {
+  .carousel-inner img {
+    width: 75%;
+    border-radius: 300px;
+  }
+  .carousel-indicators [data-bs-target] {
+    width: 2px;
+    height: 2px;
+  }
   .navbar-collapse li{
     font-size: 15px;
   }
@@ -500,7 +522,7 @@ tbody {
     margin-left: 45%;
   }
   #section-1 h3 {
-    font-size: 16px;
+    font-size: 14px;
   }
   #section-1 a {
     font-size: 10px;
@@ -571,4 +593,41 @@ svg {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+.carousel-indicators [data-bs-target] {
+  box-sizing: content-box;
+  flex: 0 1 auto;
+  width: 10px;
+  height: 10px;
+  border-radius: 100%;
+  padding: 0;
+  margin-right: 3px;
+  margin-left: 3px;
+  text-indent: -999px;
+  cursor: pointer;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 0;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  transition: opacity .6s ease;
+}
+.carousel-indicators{
+  background: none;
+}
+.carousel-indicators button{
+  color: white;
+  background: none;
+}
+.carousel-control-next-icon, .carousel-control-prev-icon {
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+  background-repeat: no-repeat;
+  background-position: 50% center;
+  background-size: 100% 100%;
+}
+.d-md-block h3 {
+  padding: 10px;
+  margin-top: 10px;
 }
