--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ tbody {
 .d-md-block {
   background: none;
   color: white;
-  padding: 10px;
+/*   padding: 10px; */
 }
 .d-md-block h3 {
   padding: 10px;
