--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ li {
   padding: 0 8px 0 8px;
   margin: 3px;
   font-weight: bold;
-  background: linear-gradient(180deg, #0e0909, rgb(51, 31, 75));
+/*   background: linear-gradient(180deg, #0e0909, rgb(51, 31, 75)); */
 }
 .d-flex button {
   font-weight: bold;
